package org.example.types;

import java.math.BigDecimal;

public enum CurrencyType {
    HUF,
    USD,
    EUR
}
